--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
@@ -38,7 +40,9 @@
   },
   "packageManager": "yarn@4.1.0",
   "devDependencies": {
+    "@babel/preset-react": "^7.23.3",
     "@craco/craco": "^7.1.0",
+    "@emotion/babel-plugin": "^11.11.0",
     "@testing-library/jest-dom": "^6.4.1",
     "@types/eslint": "^8",
     "@types/testing-library__jest-dom": "^6.0.0",
