--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "swiper": "9",
     "typescript": "^4.4.2",
+    "validator": "^13.11.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -51,6 +52,7 @@
     "@testing-library/jest-dom": "^6.4.1",
     "@types/eslint": "^8",
     "@types/testing-library__jest-dom": "^6.0.0",
+    "@types/validator": "^13.11.9",
     "craco-alias": "^3.0.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
