--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,14 +3,15 @@
         "baseUrl": ".",
         "paths": {
             "@/*": ["src/*"],
-            "@components": ["src/components/*"],
+            "@components/*": ["src/components/*"],
             "@styles/*": ["src/styles/*"],
             "@shared/*": ["src/components/shared/*"],
             "@contexts/*": ["src/contexts/*"],
             "@models/*": ["src/models/*"],
             "@pages/*": ["src/pages/*"],
             "@remote/*": ["src/remote/*"],
-            "@constants": ["src/constants/index"]
+            "@constants": ["src/constants/index"],
+            "@atoms/*": ["src/atoms/*"]
         }
     }
 }
