✨ 약관 페이지 완성

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -11,6 +11,7 @@
             "@pages/*": ["src/pages/*"],
             "@remote/*": ["src/remote/*"],
             "@constants": ["src/constants/index"],
+            "@constants/*": ["src/constants/*"],
             "@atoms/*": ["src/atoms/*"],
             "@hooks/*": ["src/hooks/*"]
         }
